# Empowering-Users-in-RecSys-Dev

./: .gitignore  Empowering_Users_in_RecSys_Dev_EDA_Heuberger.ipynb  Final Version Rec.ipynb  GR_exploration.ipynb  README.md  booksDataEDA.ipynb  recsys.ipynb  requirements.txt  test_db_connection.py
API/210_api/: pyproject.toml
API/210_api/210_api/: main.py
API/210_api/src/: __init__.py  bookEmbeddings.py  db_utils.py  main.py  rec.py  recommend.py  small_recommend.py  stringLookup.py  try.ipynb
API/210_api/src/static/: unique_titles.npy
API/210_api/train/: train.ipynb
llm_model/: README.md  pyproject.toml
llm_model/dev_notebooks/: Mistral_Instruct_LLM_model.ipynb  Mistral_Large_LLM_model.ipynb  Titan_LLM_model.ipynb
llm_model/evaluation/eval_data/: evaluation_outputs_references.jsonl
llm_model/explainbot/: __init__.py  explainbot.py  test_bot.py  utils.py
marco_dev/: README.md  pyproject.toml
marco_dev/data/: user_item_dict.pkl
marco_dev/explainbot/: app.py  explainbot.py  test_bot.py  utils.py
marco_dev/models/: LLM_model.ipynb  user_profile_generator_COLAB.ipynb
marco_dev/notebooks/: recommendation_model.ipynb
notebooks/: Bookwise_Chord_Diagram_Prep.ipynb  Bookwise_EDA_and_Feature_Engineering.ipynb
recModel/: twoTowersModel.ipynb
recModel/recModelDeploy/src/: pcaEmbeddings.py  try.ipynb
recModel/recModelDeploy/src/static/: pca_model.pkl  pca_transformed_book_embeddings.pkl
streamlit_app/: README.md  app.py  config.toml  user_profiles.json
streamlit_app/.streamlit/: config.toml
streamlit_app/assets/css/: custom_styles.css
streamlit_app/data/: genre_connections.csv  genre_metadata.csv
streamlit_app/pages/: additional_preferences.py  authors.py  completion.py  favorite_books.py  genres.py  profile.py  reading_goals.py  recent_book.py  recommendations.py  saved_for_later.py  welcome.py
streamlit_app/sections/: additional_preferences.py  authors.py  completion.py  favorite_books.py  genres.py  how_it_works.py  landing.py  profile.py  recommendations.py  saved_for_later.py  welcome.py
streamlit_app/static/: custom_styles.css
streamlit_app/utils/: api_client.py  book_cover_utils.py  book_metadata_cache.py  data_utils.py  navigation.py  profile_utils.py
