[project]
name = "explainbot"
version = "0.1.0"
description = "A book recommendation explain LLM agent"
authors = [
    {name = "Marco Zanchetta", email = "marco.zanchetta@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi >=0.75.0,<1.0.0",
    "uvicorn >=0.17.0,<1.0.0",
    "requests >=2.32.3,<3.0.0",
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "boto3 >=1.24.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pydantic = "^1.10.2"
