[project]
name = "explainbot"
version = "0.1.0"
description = "A book recommendation explain LLM agent"
authors = [
    {name = "Marco Zanchetta", email = "marco.zanchetta@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers >=4.30.0,<5.0.0",
    "torch ==2.5.1",
    "fastapi >=0.75.0,<1.0.0",
    "uvicorn >=0.17.0,<1.0.0",
    "accelerate >=0.26.0,<1.0.0",
    "bitsandbytes ==0.42.0",
    "requests >=2.32.3,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pydantic = "^1.10.2"
tqdm = "^4.67.1"
huggingface-hub = "^0.29.3"
