[tool.poetry]
name = "210_api"
version = "0.1.0"
description = ""
authors = ["zfenton <zacharytfenton@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
joblib = "^1.4.2"
scikit-learn = "1.5.0"
numpy = "^1.26"
pandas = "^2.2.3"
logging = "^0.4.9.6"
boto3 = "^1.37.13"
sagemaker = "^2.242.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
